react-sample/deploy/prod/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blog-v2
  namespace: blog
  labels:
    app: blog-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-v2
  template:
    metadata:
      labels:
        app: blog-v2
    spec:
      volumes:
        - name: host-time
          hostPath:
            path: /etc/localtime
            type: ''
      containers:
        - name: container-blog
          image: yaoyaoio/blog-v2:sha-timeline
          ports:
            - name: http-80
              containerPort: 80
              protocol: TCP
          resources: { }
          volumeMounts:
            - name: host-time
              readOnly: true
              mountPath: /etc/localtime
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: default
      serviceAccount: default
      securityContext: { }
      affinity: { }
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
