react-sample/deploy/prod/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: yaoyaoio
  namespace: blog
spec:
  tls:
    - hosts:
        - yaoyao.io
      secretName: yaoyaoio
  rules:
    - host: yaoyao.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: blog-v2
                port:
                  number: 8080
